<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name" translatable="false">Football Scores</string>

    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is a widget probably.</string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>

    <string name="title_widget_today" transable="false">Today Match</string>
    <string name="noMatchToday">No Match Today</string>
    <string name="matchOfToday">Match of Today</string>
    <string name="refresh">Refresh</string>

    <string name="flagOfHomeTeam">Flag of home team</string>
    <string name="flagOfAwayTeam">Flag of away team</string>
    <string name="nameOfHomeTeam">Name of home team</string>
    <string name="nameOfAwayTeam">Name of away team</string>
    <string name="dateOfMatch">Date of match</string>
    <string name="timeOfMatch">Time of match</string>
    <string name="scoreOfMatch">Score of match</string>

    <string name="leagueOfMatch">League of match</string>
    <string name="dayOfMatch">Day of match</string>
    <string name="aboutText">About text</string>
    <string name="connectionProblem">Connection problem</string>
    <string name="hypen" translatable="false">-</string>
    <string name="longDateFormatStr" translatable="false">yyyy-MM-ddHH:mm:ss</string>
    <string name="midDateFormatStr" translatable="false">yyyy-MM-dd:HH:mm</string>
    <string name="dateFormatStr" translatable="false">yyyy-MM-dd</string>
    <string name="dayFormatStr" translatable="false">EEEE</string>
    <string name="invalidDataStr" translatable="false">-1</string>
    <string name="footballHashtag">#Football_Scores</string>
    <string name="shareIntentType" translatable="false">text/plain</string>

    <string name="league_name_seria_a" translatable="false">Seria A</string>
    <string name="league_name_premier_league" translatable="false">Premier League</string>
    <string name="league_name_champions_league" translatable="false">UEFA Champions League</string>
    <string name="league_name_primera_division" translatable="false">Primera Division</string>
    <string name="league_name_bundesliga" translatable="false">Bundesliga</string>
    <string name="league_name_unknown">Not known League Please report</string>

    <string name="matchday_six" translatable="false">Group Stages, Matchday : 6</string>
    <string name="matchday_seven" translatable="false">First Knockout round</string>
    <string name="matchday_nine" translatable="false">QuarterFinal</string>
    <string name="matchday_eleven" translatable="false">SemiFinal</string>
    <string name="matchday_final" translatable="false">Final</string>
    <string name="matchday_str" translatable="false">Matchday : <xliff:g id="matchday">%1$s</xliff:g></string>
    <string name="spaceHypen" translatable="false"> - </string>

    <string name="teamname_arsenal" translatable="false">Arsenal London FC</string>
    <string name="teamname_manchester_united" translatable="false">Manchester United FC</string>
    <string name="teamname_swansea_city_afc" translatable="false">Swansea City</string>
    <string name="teamname_leicester_city_fc" translatable="false">Leicester City</string>
    <string name="teamname_everton_fc" translatable="false">Everton FC</string>
    <string name="teamname_west_ham" translatable="false">West Ham United FC</string>
    <string name="teamname_tottenham_hotspur" translatable="false">Tottenham Hotspur FC</string>
    <string name="teamname_west_bromwich_albion" translatable="false">West Bromwich Albion</string>
    <string name="teamname_sunderland" translatable="false">Sunderland AFC</string>
    <string name="teamname_stoke_city" translatable="false">Stoke City FC</string>

</resources>
